# WindowsAppSdkResources

./: refresh.sh
.github/prompts/: create-commit-title.prompt.md  create-pr-summary.prompt.md  fix-issue.prompt.md  review-issue.prompt.md  review-pr.prompt.md
Windows-AI-Docs/docs/apis/: imaging.md
WindowsAppSDK-ProjectTemplates/cpp-winui3-packaged/: BlankApp.vcxproj
WindowsAppSDK-ProjectTemplates/cs-winui3-packaged/: App.instructions.md  App.xaml.cs  BlankApp.csproj  BlankApp.sln  MainWindow.xaml.cs  README.md
WindowsAppSDK-ProjectTemplates/cs-winui3-packaged/Data/: Data.instructions.md  (+4 more)
WindowsAppSDK-ProjectTemplates/cs-winui3-sparse/: Sparse.instructions.md
WindowsAppSDK-ProjectTemplates/python/: .gitignore  README.md
WindowsAppSDK-ProjectTemplates/python/sparse/: .gitignore  README.md  appxmanifest.xml  pyproject.toml
WindowsAppSDK-ProjectTemplates/python/sparse/scripts/: setup.ps1
WindowsAppSDK-ProjectTemplates/python/sparse/src/winapp_identity/: __main__.py
WindowsAppSDK-ProjectTemplates/python/sparse/src/winapp_pick/: __main__.py
WindowsAppSDK-ProjectTemplates/python/unpackaged/: README.md  pyproject.toml
WindowsAppSDK-ProjectTemplates/python/unpackaged/src/winapp_notification/: __init__.py  __main__.py  notifications.py
WindowsAppSDK-ProjectTemplates/python/unpackaged/src/winapp_pick/: __main__.py
trouble-shooting-notes/: Windows-app-failed-to-launch-general-guide.md  windows-ai-maxversiontested-requirement.md  windows-ai-null-contentfilteroptions-exception.md  windows-app-manifest-webcam-capability-validation-error.md
(+193 files in other folders)
